Issue #18 removes extra padding between how-it-works-wrapper and what-we-do

--- a/index.css
+++ b/index.css
@@ -559,7 +559,7 @@ body section .about-company-wrapper .how-it-works-wrapper .how-it-works .how-it-
 }
 
 body section .about-company-wrapper .what-we-do {
-  padding: 30px 40px 0px 40px;
+  padding: 0 40px 0px 40px;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
